--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,15 @@ button:focus-visible {
   width: 600px;
 }
 
+.modal1 {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 1000px;
+}
+
+
 .modal-titulo {
   font-size: 20px;
   font-weight: bold;
