Formulario Actividad, ProyectoFase, ActividadFase

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: #1a1a1a;
   background-color: #ffffff;
@@ -103,6 +102,13 @@ button:focus-visible {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 1000px;
+}
+
+.modal2{
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 
